# embedded-lerning-tasks

./: .gitignore  README.md
big-endian-read-write/: big_endian_rw.cpp
bitfields-inside-struct/: bit-field-union.hpp
constexpr/: main.cpp
macros-for-bit-operation/: CMakeLists.txt  test-bits-operations.cpp
module_1_1/big-endian-read-write/: test.cpp
module_1_1/bitfields-inside-struct/: CMakeLists.txt  bit-field-struct.hpp  test-bit-field-size.cpp
module_1_1/macros-for-bit-operation/: bit-operations.hpp
module_1_1/sin-table-in-flash-vs-ram/: output-without-const.map  output.map
module_1_1/wait-flag-with-volatile/: main.cpp  with_volatile.s
module_1_1_test/: CMakeLists.txt  README.md  RESULTS.md
module_1_1_test/asm/: without_volatile.s
module_1_1_test/part1/: part1.s
module_1_1_test/part2/: source.cpp
module_1_1_test/part3/: part3.cpp
module_1_1_test/part4/: big_endian_rw.hpp  part4.cpp
module_1_1_test/src/: volatile_test.cpp
module_1_1_test/tests/: test_all.cpp
module_1_2/MockGPIO/: mock_gpio.cpp
module_1_2/callback_system/: CMakeLists.txt
module_1_2/callback_system/modules/: callback_slot.hpp  timer_driver.cpp  timer_driver.hpp
module_1_2/callback_system/tests/: test_timer_driver.cpp
module_1_2/memcpy_pointers/: memory-management-with-pointers.cpp  memory-management-with-pointers.hpp
module_1_2/static_pool/: CMakeLists.txt  static_pool.cpp  static_pool.hpp  static_pool_test_types.hpp  test_static_pool.cpp
module_1_2_exam/: CMakeLists.txt  README.md  RESULTS.md
module_1_2_exam/src/: memory_layout.cpp  static_pool.cpp  static_pool.hpp  static_pool_test_types.hpp
module_1_2_exam/src/event_system/: function_pointers.cpp  function_pointers.hpp
module_1_2_exam/src/hardware_register/: hardware_register.cpp  hardware_register.hpp  own_stdlib.cpp  own_stdlib.hpp
module_1_2_exam/tests/: test_events.cpp  test_hardware_register.cpp  test_own_stdlib.cpp  test_static_pool.cpp
module_2_2/MockGPIO/: CMakeLists.txt  mock_gpio.hpp  test.cpp
module_2_2/data_types_allocation/: main.cpp  output.map
module_2_2/memcpy_pointers/: compare.cpp
sin-table-in-flash-vs-ram/: main.cpp
wait-flag-with-volatile/: without_volatile.s
